feat: color florida and georgia section

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/shield-lock.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Wright Security Training | Professional Security Training Solutions</title>
+    <title>Wright Security Consultant Training | Professional Security Training Solutions</title>
     <meta name="description" content="Expert security training services compliant with Florida and Georgia guidelines. Courses, certifications, and consultations for security professionals." />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
